#14 - ver02 백엔드 세팅

--- a/doc/요구사항 정의서.md
+++ b/doc/요구사항 정의서.md
@@ -37,7 +37,7 @@ bring-XXX
 
 ### 소지품 알림 기능
 
-- 사용자는 기후 상태(눈/비/습도/기온)에 따른 소지품을 등록할 수 있다.
+- 사용자는 기후 상태에 따라 알림을 받을 소지품을 등록할 수 있다.
 - 소지품 알림은 대시보드에서 확인할 수 있다.
 - 사용자는 현재 시간 이후의 소지품 알림만 확인할 수 있다.
 
