#25 #24 - 설계 문서 작성

--- a/doc/요구사항 정의서.md
+++ b/doc/요구사항 정의서.md
@@ -16,7 +16,7 @@ bring-XXX
 ### 1-4. 용어 정의
 
 - 사용자: bring-XXX를 사용하는 사람.
-- 소지품: 챙겨야 할 물건. 우산, 마스크, 양산이 있다.
+- 소지품: 챙겨야 할 물건. 우산과 기온별 옷차림이 있다.
 
 
 # 2. 사용자 유형 정의
@@ -31,13 +31,13 @@ bring-XXX
 ## 3-1. 기능적 요구사항
 
 ### 시간/장소 관리 기능
-- 사용자는 시간별로 위치할 장소를 등록/변경/삭제할 수 있다.
+
+- 사용자는 매일 시간별로 위치할 장소를 등록/변경/삭제할 수 있다.
 - 사용자는 자신이 등록한 시간별 위치 장소를 조회할 수 있다.
 
 
 ### 소지품 알림 기능
 
-- 사용자는 기후 상태에 따라 알림을 받을 소지품을 등록할 수 있다.
 - 소지품 알림은 대시보드에서 확인할 수 있다.
 - 사용자는 현재 시간 이후의 소지품 알림만 확인할 수 있다.
 
